package org.example;

import org.example.views.CLI;

public class SportsManagementSystem {
    public static void main(String[] args) {
        new CLI().start();
    }
}
