package org.example.models;

public interface Participant {
    double rating();

    String asString();
}
